# ufrgs-micros-lab5

./: .gitignore  CMakeLists.txt
Keil/: Projeto  Projeto.hex  Projeto.lnp  Projeto.uvopt  Projeto.uvproj
Source/: config.h  emulation.h  flags.h  lcd.c  lcd.h  main.c  parser.c  parser.h  pwm.c  pwm.h  serial.c  serial.h
